--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 </head>
 <body>
-        <header id="main-header">
+        <header>
 
         <div class="container">
             <div class="e">
-                <p>Свадебный стилист и визажист</p>
-                <a href='http://olgatavluy.ru/'><img src="images/logo.png" alt="logo"></a>
-                <p>+79788188913</p>
+                <p class="text-main-header">Свадебный стилист Визажист</p>
+                <a href='http://olgatavluy.ru/'><p class="logo">Olga Tavluy</p></a>
+                <p class="text-main-header">+7(978)8188913</p>
             </div>
         </div> 
     </header>
@@ -60,10 +60,10 @@
     </section>
 
     <section id="portfolio">
-            <div class="container">
-                <p class="title" id="porfolio">Портфолио</p>
-                <p class="title" id="porfolio">Мои невесты</p>
-                <div class="autoplay" class="e" id="slider">
+            <div>
+                <p  class="container title" id="porfolio">Портфолио</p>
+                <p class="title-my-bride" id="porfolio">Мои невесты</p>
+                <div  class="container autoplay e" id="slider">
                     <img class="photo" src="./image/new/bride2.jpg" height="450px">
                     <img class="photo" src="./image/new/bride3.jpg" height="450px">
                     <img class="photo" src="./image/new/bride1.jpg" height="450px">
@@ -73,8 +73,8 @@
 
                 </div>
             
-                <p class="title" id="porfolio">Вечерние образы и для фото</p>
-                <div class="autoplay" class="e" id="slider">
+                <p class="title-my-bride" id="porfolio">Вечерние образы и для фото</p>
+                <div class="container autoplay e" class="e" id="slider">
                     <img class="photo" src="./image/new/obr1.jpg" height="450px">
                     <img class="photo" src="./image/new/obr2.jpg" height="450px">
                     <img class="photo" src="./image/new/obr3.jpg" height="450px">
@@ -86,9 +86,16 @@
         </section>
 
         <section id="else">
-                <div class="container">
-                    <p class="title-else" id="porfolio">Прочие услуги</p>
-                    <div class="autoplay" class="e" id="slider">
+                <div>
+                    <p class="title-my-bride" id="porfolio">Другие услуги</p>
+                    <p class="container">Также, у меня вы можете получить другие услуги красоты:</p>
+                    <p class="container">-архитектурное оформление бровей;</p>
+                    <p class="container">-окрашивание бровей и ресниц краской/хной;</p>
+                    <p class="container">-ламинирование ресниц.</p>
+                    <p class="container">За подробной информацией  обращайтесь по телефону или соц. сети.</p>
+
+
+                    <!-- <div class="autoplay" class="e" id="slider">
                         <figure class="sign">
                             <img class="photo" src="./image/new/obr4.jpg" width="300px">
                             <figcaption>ЛАМИНИРОВАНИЕ РЕСНИЦ</figcaption>
@@ -113,13 +120,13 @@
                             <img class="photo" src="./image/new/obr6.jpg" width="300px">
                             <figcaption>ОКРАШИВАНИЕ РЕСНИЦ</figcaption>
                         </figure>
-                    </div>
+                    </div> -->
                 </div>
         </section>
 
         <section id="diploma">
                 <div class=".container-diploma">
-                    <p class="title" id="porfolio">Мои дипломы</p>
+                    <p class="title-my-bride" id="porfolio">Димпломы и Сертификаты</p>
                     <div class="e">
                         <img class="photo big" src="./image/new/dip1.jpg">
                         <img class="photo big" src="./image/new/dip2.jpg">
@@ -142,19 +149,19 @@
         </section>
 
         <section id="comment">
-                <div class="container">
-                    <p class="title">
+                <div>
+                    <p class="title-my-bride">
                         Отзывы  
                     </p>
-                    <div class="one-comment">
+                    <div class="one-comment container">
                         <div>Катя</div>
                         <div><p> Хочу выразить огромную благодарность, самому прекрасному визажисту Ольге Тавлуй!!! Результаты макияжа и прически сделанные ею, радовали не только меня, но и окружающих! Спасибо огромное, за то, что в день моей свадьбы, подчеркнула мою красоту. Мне было очень приятно с тобой работать! Всем рекомендую этого мастера!))) Оля, ты, СУПЕР! Фото выложу позже, т.к. еще не готовы!</p></div>
                     </div>
-                    <div class="one-comment">
+                    <div class="one-comment container">
                             <div>Людила</div>
                             <div><p> Спасибо огромное за макияж и прическу. С моим небольшим генетическим богатством волос было нелегко справится,но Вы сделали невозможное! Прическа шикарная продержалась целый день,а макияж не испортился даже в ответственные моменты,когда катились слёзы. Вы большая умничка,и в восторге остались не только я,мои гости,но и фотограф,которая специально для Вас сделала несколько кадров. Сброшу,когда будут готовы </p></div>
                     </div>
-                    <div class="one-comment">
+                    <div class="one-comment container">
                             <div >Света</div>
                             <div><p> Олечка, с Вами было потрясающе просто и легко работать! Прическа и макияж продержались целый день. Не смотря на безумный ветер в Балаклаве, ни одна прядь не выбилась из прически. Причёска красивая, цены доступные... Локоны до сих пор держатся, не смотря на то что пошли вторые сутки с завивки)))
                                 Огромное спасибо за позитив на весь день! 
