--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
         <section id="else">
                 <div>
                     <p class="title-my-bride" id="porfolio">Другие услуги</p>
-                    <p class="container">Также, у меня вы можете получить другие услуги красоты:</p>
-                    <p class="container">-архитектурное оформление бровей;</p>
-                    <p class="container">-окрашивание бровей и ресниц краской/хной;</p>
-                    <p class="container">-ламинирование ресниц.</p>
-                    <p class="container">За подробной информацией  обращайтесь по телефону или соц. сети.</p>
+                    <p class="container-left">Также, у меня вы можете получить другие услуги красоты:</p>
+                    <p class="container-left"><br>-архитектурное оформление бровей;</p>
+                    <p class="container-left">-окрашивание бровей и ресниц краской/хной;</p>
+                    <p class="container-left">-ламинирование ресниц.</p>
+                    <p class="container-left"><br>За подробной информацией  обращайтесь по телефону или соц. сети.</p>
 
 
                     <!-- <div class="autoplay" class="e" id="slider">
