--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="e">
                 <p class="text-main-header">Свадебный стилист Визажист</p>
-                <a href='http://olgatavluy.ru/'><p class="logo">Olga Tavluy</p></a>
+                <a href='http://olgatavluy.ru/'><p class="logo">Olga Tavluy</p><p class="logo2">MAKEUP&HAIRESTYLE</p></a>
                 <p class="text-main-header">+7(978)8188913</p>
             </div>
         </div> 
