--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         <div class="container">
             <div class="e">
-                <p class="text-main-header">Свадебный стилист Визажист</p>
+                <p class="text-main-header1">Свадебный стилист Визажист</p>
                 <a href='http://olgatavluy.ru/'><p class="logo">Olga Tavluy</p><p class="logo2">MAKEUP&HAIRESTYLE</p></a>
-                <p class="text-main-header">+7(978)8188913</p>
+                <p class="text-main-header2">+7(978)8188913</p>
             </div>
         </div> 
     </header>
